# HUST_OS_CourseProject

./: .gitignore  .~T1601_潘翔_操作系统课程设计报告.docx  .~操作系统课程设计(2018).pptx  LICENSE  README.md  note.md
QtTest/ThreeWindows/: ThreeWindows.pro  main.cpp
QtTest/build-QtTest-Desktop-Debug/: Makefile  QtTest  moc_add_dialog.cpp  moc_cycle_dialog.cpp  moc_mainwindow.cpp  ui_add_dialog.h  ui_cycle_dialog.h  ui_mainwindow.h
QtTest/src/: add_dialog.cpp  add_dialog.h  cycle.c  cycle_dialog.cpp  cycle_dialog.h  mainwindow.cpp  mainwindow.h  (+1 more)
documents/: IOT1601_潘翔_操作系统课程设计报告.docx  操作系统课程设计(2018).pptx
myDevDriver/: .myDevDriver.ko.cmd  .myDevDriver.mod.o.cmd  .myDevDriver.o.cmd  .myDevDriver.o.d  Makefile  a.out  modules.order  myDevDriver.c  myDevDriver.ko  myDevDriver.mod.c  myDevDriver_test.c
myFileSystem/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  myfs  myfs.cbp  myfs.cpp  myfs.h  qwe.txt
myFileSystem/back/include/: myfs.hpp  superblock.hpp
myFileSystem/back/src/: Makefile  superblock.cpp
myFileSystem/include/: Buffer.hpp  direntry.hpp  freenode.hpp  inode.hpp  macro.h  myfs.hpp  myfs_macro.h  superblock.hpp
myFileSystem/src/: Buffer.cpp  Makefile  direntry.cpp  inode.cpp  inode.hpp  main  main.cpp  myfs.cpp  myfs.hpp  note.md  output  superblock.cpp
myFileSystem_mem/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  importfile.txt  myfs  myfs.cbp
myLinuxMonitor/: chart.cpp  chart.h  filesystems.cpp  filesystems.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myLinuxMonitor.pro  myLinuxMonitor.pro.user.ee1c9f9  netinfo.cpp  netinfo.h  processes.cpp  processes.h  procreader_copy.cpp  progressbardelegate.cpp  progressbardelegate.h  qstandarditemmodelex.cpp  qstandarditemmodelex.h  resources.cpp  resources.h  rsc.qrc  s  tablemodel.cpp  tablemodel.h  tableview.cpp  tableview.h
mycp/: copy.txt  mycp  mycp.cpp
(+37 files in other folders)
